OSGi run and OSGi debig options for sync startup of the selected runtime

--- a/plugins/org.eclipse.libra.framework.equinox.ui/plugin.xml
+++ b/plugins/org.eclipse.libra.framework.equinox.ui/plugin.xml
@@ -131,6 +131,12 @@
         id="org.eclipse.libra.framework.equinox.ui.syncstart"
         label="OSGi Run">
       </action>
+      <action 
+        class="org.eclipse.libra.framework.ui.internal.actions.SyncDebugAction"
+        enablesFor="1"
+        id="org.eclipse.libra.framework.equinox.ui.syncdebug"
+        label="OSGi Debug">
+      </action>
     </objectContribution>
     <objectContribution
       adaptable="true"
