--- a/plugins/org.eclipse.libra.framework.felix.ui/plugin.xml
+++ b/plugins/org.eclipse.libra.framework.felix.ui/plugin.xml
@@ -134,11 +134,17 @@
         id="org.eclipse.libra.framework.felix.ui.cleanserverworkdir"
         label="%cleanFelixWorkDir">
       </action>
-            <action 
+      <action 
         class="org.eclipse.libra.framework.ui.internal.actions.SyncStartAction"
         enablesFor="1"
         id="org.eclipse.libra.framework.felix.ui.syncstart"
         label="OSGi Run">
+      </action>
+      <action 
+        class="org.eclipse.libra.framework.ui.internal.actions.SyncDebugAction"
+        enablesFor="1"
+        id="org.eclipse.libra.framework.felix.ui.syncdebug"
+        label="OSGi Debug">
       </action>
     </objectContribution>
     <objectContribution
