[357386] Tune plug-in metadata.

--- a/features/org.eclipse.libra.framework.editor.feature/feature.properties
+++ b/features/org.eclipse.libra.framework.editor.feature/feature.properties
@@ -11,7 +11,7 @@
 featureName=OSGi Framework Editor (Incubation)
 providerName=Eclipse Web Tools Platform
 
-description=Provides server editor parts for analyzing the bundle state of an OSGi Framework.
+description=Provides server editor parts for analyzing the bundle state and dependencies of an OSGi Framework.
 
 # "copyright" property - text of the "Feature Update Copyright"
 copyright=\
