--- a/development/org.eclipse.libra.releng/pom.xml
+++ b/development/org.eclipse.libra.releng/pom.xml
@@ -10,12 +10,13 @@
 
 	<properties>
 		<tycho-version>0.12.0</tycho-version>
-		<eclipse-site>http://download.eclipse.org/eclipse/updates/3.7milestones/</eclipse-site>
-		<emf-site>http://download.eclipse.org/modeling/emf/emf/updates/2.7milestones/</emf-site>
+		<eclipse-site>http://download.eclipse.org/eclipse/updates/3.7/</eclipse-site>
+		<emf-site>http://download.eclipse.org/modeling/emf/emf/updates/2.7/</emf-site>
 		<dtp-site>http://download.eclipse.org/datatools/updates/</dtp-site>
 		<wtp-site>http://download.eclipse.org/webtools/repository/indigo/</wtp-site>
 		<gef-site>http://download.eclipse.org/tools/gef/updates/releases</gef-site>
 		<wtp-tests-site>http://download.eclipse.org/webtools/downloads/drops/R3.3.0/R-3.3.0-20110607160810/repositoryunittests/</wtp-tests-site>
+		<orbit-site>http://download.eclipse.org/tools/orbit/downloads/drops/S20110907174232/repository/</orbit-site>
 		<debug-options></debug-options> <!-- empty by default -->
 	</properties>
 
@@ -47,6 +48,7 @@
 		<module>../../plugins/org.eclipse.libra.framework.knopflerfish.ui</module>
 		<module>../../plugins/org.eclipse.libra.framework.editor.core</module>
 		<module>../../plugins/org.eclipse.libra.framework.editor.ui</module>
+		<module>../../plugins/org.eclipse.libra.framework.editor.integration</module>
 		<module>../../features/org.eclipse.libra.framework.editor.feature</module>
 		<module>../../features/org.eclipse.libra.framework.editor.feature.source</module>
 
@@ -208,6 +210,11 @@
 		<repository>
 			<id>wtp-sdk-tests</id>
 			<url>${wtp-tests-site}</url>
+			<layout>p2</layout>
+		</repository>
+		<repository>
+			<id>orbit</id>
+			<url>${orbit-site}</url>
 			<layout>p2</layout>
 		</repository>
 	</repositories>
