--- a/plugins/org.eclipse.libra.framework.ui/plugin.xml
+++ b/plugins/org.eclipse.libra.framework.ui/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
 <!--
-      Copyright (c) 2010 Eteration A.S. and others.
+      Copyright (c) 2010, 2011 Eteration A.S. and others.
       All rights reserved. This program and the accompanying materials
       are made available under the terms of the Eclipse Public License v1.0
       which accompanies this distribution, and is available at
@@ -9,13 +9,38 @@
      
       Contributors:
          Naci Dai and Murat Yener, Eteration A.S. - Initial API and implementation
+         Kaloyan Raev, SAP AG - integration with OSGi Framework Editor parts
  -->
 
 <plugin>
-<extension point="org.eclipse.wst.server.ui.serverImages">
-  <image
-     id="org.eclipse.wst.server.ui.web"
-     typeIds="osgi.bundle"
-     icon="icons/obj16/bundle_obj.png"/>
-</extension>
+   <extension point="org.eclipse.wst.server.ui.serverImages">
+      <image
+         id="org.eclipse.wst.server.ui.web"
+         typeIds="osgi.bundle"
+         icon="icons/obj16/bundle_obj.png"/>
+   </extension>
+   <extension
+         point="org.eclipse.wst.server.ui.editorPages">
+      <page
+            class="org.eclipse.libra.framework.editor.ui.overview.BundleInformationEditorPage"
+            id="org.eclipse.libra.framework.editor.integration.bundleInformation"
+            name="Bundle Overview"
+            order="30"
+            typeIds="org.eclipse.libra.framework.*">
+      </page>
+      <page
+            class="org.eclipse.libra.framework.editor.ui.dependencies.BundleDependencyEditorPage"
+            id="org.eclipse.libra.framework.editor.integration..bundleDependency"
+            name="Bundle Dependency Graph"
+            order="40"
+            typeIds="org.eclipse.libra.framework.*">
+      </page>
+      <page
+            class="org.eclipse.libra.framework.editor.ui.console.ServerConsoleEditorPage"
+            id="org.eclipse.libra.framework.editor.integration.serverConsole"
+            name="Console"
+            order="50"
+            typeIds="org.eclipse.libra.framework.*">
+      </page>
+   </extension>
 </plugin>
