Synchronous start patch and fixes for TargetPlatformService

--- a/plugins/org.eclipse.libra.framework.felix/plugin.xml
+++ b/plugins/org.eclipse.libra.framework.felix/plugin.xml
@@ -76,6 +76,7 @@
             stopTimeout="120000"
             initialState="stopped"
             startBeforePublish="false"
+            synchronousStart="true"
             hasConfiguration="true"
             launchConfigId="org.eclipse.libra.framework.felix.launchConfigurationType"
             runtimeTypeId="org.eclipse.libra.framework.felix.runtimeType.20x"           
@@ -92,6 +93,7 @@
             stopTimeout="120000"
             initialState="stopped"
             startBeforePublish="false"
+            synchronousStart="true"
             hasConfiguration="true"
             launchConfigId="org.eclipse.libra.framework.felix.launchConfigurationType"
             runtimeTypeId="org.eclipse.libra.framework.felix.runtimeType.30x"           
