--- a/plugins/org.eclipse.libra.framework.equinox/plugin.xml
+++ b/plugins/org.eclipse.libra.framework.equinox/plugin.xml
@@ -63,6 +63,7 @@
             stopTimeout="120000"
             initialState="stopped"
             startBeforePublish="false"
+            synchronousStart="true"
             hasConfiguration="true"
             launchConfigId="org.eclipse.libra.framework.equinox.launchConfigurationType"
             runtimeTypeId="org.eclipse.libra.framework.equinox.runtimeType.30x"           
