[364129] Error logged on Eclipse startup
The contribution to the o.e.ui.startup ext point is moved to the UI
plugin and now pointing to a dedicated startup class.

--- a/plugins/org.eclipse.libra.facet.ui/plugin.xml
+++ b/plugins/org.eclipse.libra.facet.ui/plugin.xml
@@ -84,6 +84,12 @@
          </page>
       </wizard-pages>
    </extension>
+   <extension
+         point="org.eclipse.ui.startup">
+      <startup
+            class="org.eclipse.libra.facet.internal.ui.LibraFacetUIStartup">
+      </startup>
+   </extension>
    
 
 </plugin>
