JMX Port Settings Editor Components
Change-Id: I0b9bf677b8d95cb32d8d388129fd5f1d0479effe

--- a/plugins/org.eclipse.libra.framework.equinox.ui/plugin.xml
+++ b/plugins/org.eclipse.libra.framework.equinox.ui/plugin.xml
@@ -73,14 +73,20 @@
    
     <extension point="org.eclipse.wst.server.ui.editorPageSections">
       <section
-         id="org.eclipse.libra.framework.equinox.editor.instance"
+         id="org.eclipse.libra.framework.equinox.editor.instance.javaprofile"
          order="0"
          insertionId="org.eclipse.wst.server.editor.overview.right"
          typeIds="org.eclipse.libra.framework.equinox.serverType.*"
          class="org.eclipse.libra.framework.equinox.ui.internal.JavaProfileEditorSection"/>
+      <section
+         id="org.eclipse.libra.framework.equinox.editor.instance.jmxconsole"
+         order="0"
+         insertionId="org.eclipse.wst.server.editor.overview.right"
+         typeIds="org.eclipse.libra.framework.equinox.serverType.*"
+         class="org.eclipse.libra.framework.ui.JMXPropertiesEditorSection"/>
 
    </extension>
-   
+    
    <extension point="org.eclipse.wst.server.ui.wizardFragments">
       <fragment
          id="org.eclipse.libra.framework.equinox.30x"
