--- a/development/org.eclipse.libra.releng/pom.xml
+++ b/development/org.eclipse.libra.releng/pom.xml
@@ -4,17 +4,19 @@
 
 	<groupId>org.eclipse.libra</groupId>
 	<artifactId>org.eclipse.libra_parent</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>0.1.3-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Libra Parent POM</name>
 
 	<properties>
-		<tycho-version>0.12.0</tycho-version>
-		<eclipse-site>http://download.eclipse.org/eclipse/updates/3.7milestones/</eclipse-site>
-		<emf-site>http://download.eclipse.org/modeling/emf/emf/updates/2.7milestones/</emf-site>
-		<dtp-site>http://download.eclipse.org/datatools/updates/</dtp-site>
-		<wtp-site>http://download.eclipse.org/webtools/repository/indigo/</wtp-site>
-		<wtp-tests-site>http://download.eclipse.org/webtools/downloads/drops/R3.3.0/R-3.3.0-20110607160810/repositoryunittests/</wtp-tests-site>
+		<tycho-version>0.13.0</tycho-version>
+		<eclipse-site>http://download.eclipse.org/eclipse/updates/3.7/R-3.7.2-201202080800</eclipse-site>
+		<emf-site>http://download.eclipse.org/modeling/emf/emf/updates/2.7.x/</emf-site>
+		<dtp-site>http://download.eclipse.org/datatools/downloads/drops/M_updates_1.9.2</dtp-site>
+		<wtp-site>http://download.eclipse.org/webtools/downloads/drops/R3.3.2/R-3.3.2-20120210195245/repository/</wtp-site>
+		<gef-site>http://download.eclipse.org/tools/gef/updates/releases</gef-site>
+		<wtp-tests-site>http://download.eclipse.org/webtools/downloads/drops/R3.3.2/R-3.3.2-20120210195245/repositoryunittests/</wtp-tests-site>
+		<orbit-site>http://download.eclipse.org/tools/orbit/downloads/drops/S20110907174232/repository/</orbit-site>
 		<debug-options></debug-options> <!-- empty by default -->
 	</properties>
 
@@ -31,6 +33,24 @@
 		<module>../org.eclipse.libra.repository</module>
 		<module>../../tests/org.eclipse.libra.facet.test</module>
 		<module>../../tests/org.eclipse.libra.warproducts.core.test</module>
+		
+		<module>../../features/org.eclipse.libra.framework.feature</module>
+		<module>../../features/org.eclipse.libra.framework.feature.source</module>
+		<module>../../plugins/org.eclipse.libra.framework.core</module>
+		<module>../../plugins/org.eclipse.libra.framework.ui</module>
+		<module>../../plugins/org.eclipse.libra.framework.equinox</module>
+		<module>../../plugins/org.eclipse.libra.framework.equinox.ui</module>
+		<module>../../plugins/org.eclipse.libra.framework.felix</module>
+		<module>../../plugins/org.eclipse.libra.framework.felix.ui</module>
+		<module>../../plugins/org.eclipse.libra.framework.jonas</module>
+		<module>../../plugins/org.eclipse.libra.framework.jonas.ui</module>
+		<module>../../plugins/org.eclipse.libra.framework.knopflerfish</module>
+		<module>../../plugins/org.eclipse.libra.framework.knopflerfish.ui</module>
+		<module>../../plugins/org.eclipse.libra.framework.editor.core</module>
+		<module>../../plugins/org.eclipse.libra.framework.editor.ui</module>
+		<module>../../plugins/org.eclipse.libra.framework.editor.integration</module>
+		<module>../../features/org.eclipse.libra.framework.editor.feature</module>
+		<module>../../features/org.eclipse.libra.framework.editor.feature.source</module>
 	</modules>
 
 	<profiles>
@@ -182,8 +202,18 @@
 			<layout>p2</layout>
 		</repository>
 		<repository>
+			<id>gef-sdk</id>
+			<url>${gef-site}</url>
+			<layout>p2</layout>
+		</repository>
+		<repository>
 			<id>wtp-sdk-tests</id>
 			<url>${wtp-tests-site}</url>
+			<layout>p2</layout>
+		</repository>
+		<repository>
+			<id>orbit</id>
+			<url>${orbit-site}</url>
 			<layout>p2</layout>
 		</repository>
 	</repositories>
