[381816] Bundles without about.html files

--- a/plugins/org.eclipse.libra.warproducts.help/build.properties
+++ b/plugins/org.eclipse.libra.warproducts.help/build.properties
@@ -7,3 +7,4 @@ bin.includes = META-INF/,\
                about.html,\
                book.css,\
                images/
+src.includes = about.html
