--- a/tests/org.eclipse.libra.facet.test/build.properties
+++ b/tests/org.eclipse.libra.facet.test/build.properties
@@ -16,4 +16,5 @@ bin.includes = META-INF/,\
                build.properties,\
                about.html,\
                resources/
+src.includes = about.html
 
