--- a/plugins/org.eclipse.libra.framework.equinox/build.properties
+++ b/plugins/org.eclipse.libra.framework.equinox/build.properties
@@ -13,4 +13,6 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               plugin.properties
+               plugin.properties,\
+               about.html
+src.includes = about.html
