--- a/development/org.eclipse.libra.repository/pom.xml
+++ b/development/org.eclipse.libra.repository/pom.xml
@@ -32,9 +32,8 @@
 			<build>
 				<plugins>
 					<plugin>
-						<groupId>org.eclipse.dash.m4e</groupId>
+						<groupId>org.eclipse.dash.maven</groupId>
 						<artifactId>eclipse-signing-maven-plugin</artifactId>
-						<version>1.0.4</version>
 						<executions>
 							<!-- Pack the p2 repository. -->
 							<execution>
@@ -76,8 +75,6 @@
 							</execution>
 						</executions>
 					</plugin>
-					<!-- This is what I use to deploy a p2 repository someplace to test 
-						from before manually making active. -->
 					<plugin>
 						<artifactId>maven-antrun-plugin</artifactId>
 						<executions>
