--- a/development/org.eclipse.libra.repository/pom.xml
+++ b/development/org.eclipse.libra.repository/pom.xml
@@ -13,6 +13,10 @@
 	<packaging>eclipse-repository</packaging>
 	<name>Eclipse Libra Repository (Incubation)</name>
 
+	<properties>
+		<p2repo-zip-path>${project.build.directory}/org.eclipse.libra.repository.zip</p2repo-zip-path>
+	</properties>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -38,6 +42,9 @@
 							<!-- Pack the p2 repository. -->
 							<execution>
 								<id>pack</id>
+								<configuration>
+									<inputFile>${p2repo-zip-path}</inputFile>
+								</configuration>
 								<phase>package</phase>
 								<goals>
 									<goal>pack</goal>
@@ -47,6 +54,7 @@
 							<execution>
 								<id>sign</id>
 								<configuration>
+									<inputFile>${p2repo-zip-path}</inputFile>
 									<signerInputDirectory>/home/data/httpd/download-staging.priv/webtools/libra</signerInputDirectory>
 								</configuration>
 								<phase>package</phase>
