[407742] Inapproprite provider name in many libra features

--- a/plugins/org.eclipse.libra.framework.equinox.ui/plugin.properties
+++ b/plugins/org.eclipse.libra.framework.equinox.ui/plugin.properties
@@ -9,7 +9,7 @@
 #      Naci Dai and Murat Yener, Eteration A.S. - Initial API and implementation
 ###############################################################################
 pluginName=Equinox UI Support
-providerName=Eteration A.S.
+providerName=Eclipse Web Tools Platform
 
 configurationEditorOSGiModulesPage=Modules
 configurationEditorTargetPage=Target Platform Profile
