--- a/plugins/org.eclipse.libra.framework.felix/plugin.properties
+++ b/plugins/org.eclipse.libra.framework.felix/plugin.properties
@@ -9,7 +9,7 @@
 #      Naci Dai and Murat Yener, Eteration A.S. - Initial API and implementation
 ###############################################################################
 pluginName=Apache Felix Support
-providerName=Eteration A.S.
+providerName=Eclipse Web Tools Platform
 
 # --------------- Runtime Types ---------------
 libra=Eclipse Libra
