--- a/plugins/org.eclipse.libra.framework.core/plugin.properties
+++ b/plugins/org.eclipse.libra.framework.core/plugin.properties
@@ -9,4 +9,4 @@
 #      Naci Dai and Murat Yener, Eteration A.S. - Initial API and implementation
 ################################################################################
 pluginName=OSGI Runtime Support
-providerName=Eteration A.S.
+providerName=Eclipse Web Tools Platform
