--- a/development/org.eclipse.libra.repository/pom.xml
+++ b/development/org.eclipse.libra.repository/pom.xml
@@ -32,86 +32,77 @@
 
 	<profiles>
 		<profile>
-			<id>build-server</id>
+			<id>eclipse-sign</id>
 			<build>
 				<plugins>
 					<plugin>
-						<groupId>org.eclipse.dash.maven</groupId>
-						<artifactId>eclipse-signing-maven-plugin</artifactId>
+						<groupId>org.eclipse.tycho</groupId>
+						<artifactId>target-platform-configuration</artifactId>
+						<version>${tycho-version}</version>
+						<configuration>
+							<includePackedArtifacts>false</includePackedArtifacts>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.eclipse.tycho.extras</groupId>
+						<artifactId>tycho-pack200a-plugin</artifactId>
+						<version>${tycho-version}</version>
 						<executions>
-							<!-- Pack the p2 repository. -->
 							<execution>
-								<id>pack</id>
-								<configuration>
-									<inputFile>${p2repo-zip-path}</inputFile>
-								</configuration>
-								<phase>package</phase>
+								<id>pack200-normalize</id>
 								<goals>
-									<goal>pack</goal>
+									<goal>normalize</goal>
 								</goals>
-							</execution>
-							<!-- Sign the p2 repository -->
-							<execution>
-								<id>sign</id>
-								<configuration>
-									<inputFile>${p2repo-zip-path}</inputFile>
-									<signerInputDirectory>/home/data/httpd/download-staging.priv/webtools/libra</signerInputDirectory>
-								</configuration>
-								<phase>package</phase>
-								<goals>
-									<goal>sign</goal>
-								</goals>
-							</execution>
-							<!-- Repack the p2 repository -->
-							<execution>
-								<id>repack</id>
-								<configuration>
-									<inputFile>${project.build.directory}/signed/site_assembly.zip</inputFile> <!-- this is output from signer mojo -->
-								</configuration>
-								<phase>package</phase>
-								<goals>
-									<goal>pack</goal>
-								</goals>
-							</execution>
-							<!-- Signing and packing alters checksums so fix them -->
-							<execution>
-								<id>fixCheckSums</id>
-								<phase>package</phase>
-								<goals>
-									<goal>fixCheckSums</goal>
-								</goals>
+								<phase>verify</phase>
 							</execution>
 						</executions>
 					</plugin>
 					<plugin>
-						<artifactId>maven-antrun-plugin</artifactId>
+						<groupId>org.eclipse.cbi.maven.plugins</groupId>
+						<artifactId>eclipse-jarsigner-plugin</artifactId>
+						<version>1.0.4</version>
 						<executions>
 							<execution>
-								<id>deploy</id>
-								<phase>install</phase>
+								<id>sign</id>
 								<goals>
-									<goal>run</goal>
+									<goal>sign</goal>
 								</goals>
-								<configuration>
-									<tasks>
-										<delete includeemptydirs="false">
-											<fileset
-												dir="${p2-publish-dir}">
-												<include name="**" />
-											</fileset>
-										</delete>
-										<copy includeemptydirs="false"
-											todir="${p2-publish-dir}">
-											<fileset dir="target/checksumFix">
-												<include name="**" />
-											</fileset>
-										</copy>
-									</tasks>
-								</configuration>
+								<phase>verify</phase>
 							</execution>
 						</executions>
 					</plugin>
-				</plugins>
+					<plugin>
+						<groupId>org.eclipse.tycho.extras</groupId>
+						<artifactId>tycho-pack200b-plugin</artifactId>
+						<version>${tycho-version}</version>
+						<executions>
+							<execution>
+								<id>pack200-pack</id>
+								<goals>
+									<goal>pack</goal>
+								</goals>
+								<phase>verify</phase>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.eclipse.tycho</groupId>
+						<artifactId>tycho-p2-plugin</artifactId>
+						<version>${tycho-version}</version>
+						<executions>
+							<execution>
+								<id>p2-metadata</id>
+								<goals>
+									<goal>p2-metadata</goal>
+								</goals>
+								<phase>verify</phase>
+							</execution>
+						</executions>
+						<configuration>
+							<defaultP2Metadata>false</defaultP2Metadata>
+						</configuration>
+					</plugin>
+	       		</plugins>
 			</build>
 		</profile>
 	</profiles>
