--- a/development/org.eclipse.libra.repository/pom.xml
+++ b/development/org.eclipse.libra.repository/pom.xml
@@ -25,4 +25,43 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	<profiles>
+		<profile>
+			<id>publish-site</id>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-antrun-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>deploy</id>
+								<phase>install</phase>
+								<goals>
+									<goal>run</goal>
+								</goals>
+								<configuration>
+									<tasks>
+										<delete includeemptydirs="false">
+											<fileset
+												dir="${p2-publish-dir}">
+												<include name="**" />
+											</fileset>
+										</delete>
+										<copy includeemptydirs="false"
+											todir="${p2-publish-dir}">
+											<fileset dir="target/repository">
+												<include name="**" />
+											</fileset>
+										</copy>
+									</tasks>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
+
