--- a/features/org.eclipse.libra.framework.editor.feature/feature.properties
+++ b/features/org.eclipse.libra.framework.editor.feature/feature.properties
@@ -15,11 +15,11 @@ description=Provides server editor parts for analyzing the bundle state and depe
 
 # "copyright" property - text of the "Feature Update Copyright"
 copyright=\
-Copyright (c) 2009, 2011 SpringSource, a divison of VMware, Inc. and others\
-All rights reserved. This program and the accompanying materials\
-are made available under the terms of the Eclipse Public License v1.0\
-which accompanies this distribution, and is available at\
-http://www.eclipse.org/legal/epl-v10.html\
+Copyright (c) 2009, 2011 SpringSource, a divison of VMware, Inc. and others\n\
+All rights reserved. This program and the accompanying materials\n\
+are made available under the terms of the Eclipse Public License v1.0\n\
+which accompanies this distribution, and is available at\n\
+http://www.eclipse.org/legal/epl-v10.html\n\
 \n\
 Contributors:\n\
     SpringSource, a division of VMware, Inc. - initial API and implementation\n\
