--- a/features/org.eclipse.libra.framework.feature.source/feature.properties
+++ b/features/org.eclipse.libra.framework.feature.source/feature.properties
@@ -15,11 +15,11 @@ description=Source code archives for OSGi Framework Launchers.
 
 # "copyright" property - text of the "Feature Update Copyright"
 copyright=\
-Copyright (c) 2010, 2011 Eteration A.S.\
-All rights reserved. This program and the accompanying materials\
-are made available under the terms of the Eclipse Public License v1.0\
-which accompanies this distribution, and is available at\
-http://www.eclipse.org/legal/epl-v10.html\
+Copyright (c) 2010, 2011 Eteration A.S.\n\
+All rights reserved. This program and the accompanying materials\n\
+are made available under the terms of the Eclipse Public License v1.0\n\
+which accompanies this distribution, and is available at\n\
+http://www.eclipse.org/legal/epl-v10.html\n\
 \n\
 Contributors:\n\
      Naci Dai (Eteration A.S.) - initial API and implementation\n
