--- a/development/org.eclipse.libra.releng/pom.xml
+++ b/development/org.eclipse.libra.releng/pom.xml
@@ -9,14 +9,14 @@
 	<name>Libra Parent POM</name>
 
 	<properties>
-		<tycho-version>0.20.0</tycho-version>
-		<eclipse-site>http://download.eclipse.org/eclipse/updates/4.4milestones/</eclipse-site>
-		<emf-site>http://download.eclipse.org/modeling/emf/emf/updates/2.10milestones/</emf-site>
+		<tycho-version>0.26.0</tycho-version>
+		<eclipse-site>http://download.eclipse.org/eclipse/updates/4.6/</eclipse-site>
+		<emf-site>http://download.eclipse.org/modeling/emf/emf/updates/2.12/</emf-site>
 		<dtp-site>http://download.eclipse.org/datatools/downloads/drops/M_updates_1.12.0/</dtp-site>
-		<gef-site>http://download.eclipse.org/tools/gef/updates/milestones</gef-site>
-		<wtp-site>http://download.eclipse.org/webtools/downloads/drops/R3.6.0/S-3.6.0M7-20140505163128/repository/</wtp-site>
-		<wtp-tests-site>http://download.eclipse.org/webtools/downloads/drops/R3.6.0/S-3.6.0M7-20140505163128/repositoryunittests/</wtp-tests-site>
-		<orbit-site>http://download.eclipse.org/tools/orbit/downloads/drops/R20130118183705/repository/</orbit-site>
+		<gef-site>http://download.eclipse.org/tools/gef/updates/releases</gef-site>
+		<wtp-site>http://download.eclipse.org/webtools/downloads/drops/R3.8.0/R-3.8.0-20160608130753/repository/</wtp-site>
+		<wtp-tests-site>http://download.eclipse.org/webtools/downloads/drops/R3.8.0/R-3.8.0-20160608130753/repositoryunittests/</wtp-tests-site>
+		<orbit-site>http://download.eclipse.org/tools/orbit/downloads/drops/R20160520211859/repository/</orbit-site>
 		<license-site>http://download.eclipse.org/cbi/updates/license</license-site>
 		<debug-options></debug-options> <!-- empty by default -->
 	</properties>
@@ -63,11 +63,8 @@
 			</plugin>
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>target-platform-configuration</artifactId>
+				<artifactId>tycho-p2-repository-plugin</artifactId>
 				<version>${tycho-version}</version>
-				<configuration>
-					<resolver>p2</resolver>
-				</configuration>
 			</plugin>
 		</plugins>
 		<pluginManagement>
