--- a/development/org.eclipse.libra.releng/pom.xml
+++ b/development/org.eclipse.libra.releng/pom.xml
@@ -171,13 +171,12 @@
 			</properties>
 		</profile>
 		<profile>
-			<id>eclipse-sign</id>
+			<id>sign</id>
 			<build>
 				<plugins>
 					<plugin>
 						<groupId>org.eclipse.tycho</groupId>
 						<artifactId>target-platform-configuration</artifactId>
-						<version>${tycho-version}</version>
 						<configuration>
 							<includePackedArtifacts>true</includePackedArtifacts>
 						</configuration>
@@ -185,7 +184,6 @@
 					<plugin>
 						<groupId>org.eclipse.tycho.extras</groupId>
 						<artifactId>tycho-pack200a-plugin</artifactId>
-						<version>${tycho-version}</version>
 						<executions>
 							<execution>
 								<id>pack200-normalize</id>
@@ -199,7 +197,6 @@
 					<plugin>
 						<groupId>org.eclipse.cbi.maven.plugins</groupId>
 						<artifactId>eclipse-jarsigner-plugin</artifactId>
-						<version>1.0.4</version>
 						<executions>
 							<execution>
 								<id>sign</id>
@@ -213,7 +210,6 @@
 					<plugin>
 						<groupId>org.eclipse.tycho.extras</groupId>
 						<artifactId>tycho-pack200b-plugin</artifactId>
-						<version>${tycho-version}</version>
 						<executions>
 							<execution>
 								<id>pack200-pack</id>
@@ -227,7 +223,6 @@
 					<plugin>
 						<groupId>org.eclipse.tycho</groupId>
 						<artifactId>tycho-p2-plugin</artifactId>
-						<version>${tycho-version}</version>
 						<executions>
 							<execution>
 								<id>p2-metadata</id>
@@ -241,7 +236,7 @@
 							<defaultP2Metadata>false</defaultP2Metadata>
 						</configuration>
 					</plugin>
-	       		</plugins>
+				</plugins>
 			</build>
 		</profile>
 	</profiles>
