--- a/development/org.eclipse.libra.releng/pom.xml
+++ b/development/org.eclipse.libra.releng/pom.xml
@@ -4,19 +4,22 @@
 
 	<groupId>org.eclipse.libra</groupId>
 	<artifactId>org.eclipse.libra_parent</artifactId>
-	<version>0.3.3-SNAPSHOT</version>
+	<version>0.3.5-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Libra Parent POM</name>
 
 	<properties>
 		<tycho-version>0.26.0</tycho-version>
-		<eclipse-site>http://download.eclipse.org/releases/photon/</eclipse-site>
-		<emf-site>http://download.eclipse.org/modeling/emf/emf/updates/2.12/</emf-site>
-		<dtp-site>http://download.eclipse.org/datatools/downloads/drops/N_updates_1.12.0/v20140606-1324/</dtp-site>
-		<gef-site>http://download.eclipse.org/tools/gef/updates/releases</gef-site>
-		<wtp-site>http://download.eclipse.org/webtools/downloads/drops/R3.10.0/R-3.10.0-20180611164516/repository/</wtp-site>
-		<wtp-tests-site>http://download.eclipse.org/webtools/downloads/drops/R3.10.0/R-3.10.0-20180611164516/repositoryunittests/</wtp-tests-site>
-		<orbit-site>http://download.eclipse.org/tools/orbit/downloads/drops/R20180606145124/repository/</orbit-site>
+		<eclipse-site>http://download.eclipse.org/releases/2019-03/201903201000/</eclipse-site>
+		<emf-site>http://download.eclipse.org/releases/2019-03/201903201000/</emf-site>
+		<dtp-site>http://download.eclipse.org/releases/2019-03/201903201000/</dtp-site>
+		<gef-site>http://download.eclipse.org/releases/2019-03/201903201000/</gef-site>
+		<!-- <emf-site>http://download.eclipse.org/modeling/emf/emf/updates/2.12/</emf-site> -->
+		<!-- <dtp-site>http://download.eclipse.org/datatools/downloads/drops/N_updates_1.12.0/v20140606-1324/</dtp-site> -->
+		<!-- <gef-site>http://download.eclipse.org/tools/gef/updates/releases</gef-site> -->
+		<wtp-site>http://download.eclipse.org/webtools/downloads/drops/R3.13.0/R-3.13.0-20190308131645/repository/</wtp-site>
+		<wtp-tests-site>http://download.eclipse.org/webtools/downloads/drops/R3.13.0/R-3.13.0-20190308131645/repositoryunittests/</wtp-tests-site>
+		<orbit-site>http://download.eclipse.org/tools/orbit/downloads/drops/S20190219190953/repository/</orbit-site>
 		<license-site>http://download.eclipse.org/cbi/updates/license</license-site>
 		<debug-options></debug-options> <!-- empty by default -->
 	</properties>
