--- a/development/org.eclipse.libra.releng/pom.xml
+++ b/development/org.eclipse.libra.releng/pom.xml
@@ -1,27 +1,26 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.eclipse.libra</groupId>
 	<artifactId>org.eclipse.libra_parent</artifactId>
-	<version>0.3.5-SNAPSHOT</version>
+	<version>4.17.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Libra Parent POM</name>
 
 	<properties>
 		<tycho-version>1.4.0</tycho-version>
 		<eclipse-site>https://download.eclipse.org/releases/2020-09/202009161000/</eclipse-site>
-		<emf-site    >https://download.eclipse.org/releases/2020-09/202009161000/</emf-site>
-		<dtp-site    >https://download.eclipse.org/releases/2020-09/202009161000/</dtp-site>
-		<gef-site    >https://download.eclipse.org/releases/2020-09/202009161000/</gef-site>
+		<emf-site>https://download.eclipse.org/releases/2020-09/202009161000/</emf-site>
+		<dtp-site>https://download.eclipse.org/releases/2020-09/202009161000/</dtp-site>
+		<gef-site>https://download.eclipse.org/releases/2020-09/202009161000/</gef-site>
 		<!-- <emf-site>http://download.eclipse.org/modeling/emf/emf/updates/2.12/</emf-site> -->
 		<!-- <dtp-site>http://download.eclipse.org/datatools/downloads/drops/N_updates_1.12.0/v20140606-1324/</dtp-site> -->
 		<!-- <gef-site>http://download.eclipse.org/tools/gef/updates/releases</gef-site> -->
-		<wtp-site    >https://download.eclipse.org/webtools/downloads/drops/R3.19.0/R-3.19.0-20200828030223/repository/</wtp-site>
+		<wtp-site>https://download.eclipse.org/webtools/downloads/drops/R3.19.0/R-3.19.0-20200828030223/repository/</wtp-site>
 		<wtp-tests-site>https://download.eclipse.org/webtools/downloads/drops/R3.19.0/R-3.19.0-20200828030223/repositoryunittests/</wtp-tests-site>
-		<orbit-site  >https://download.eclipse.org/tools/orbit/downloads/drops/R20200831200620/repository/</orbit-site>
+		<orbit-site>https://download.eclipse.org/tools/orbit/downloads/drops/R20200831200620/repository/</orbit-site>
 		<license-site>http://download.eclipse.org/cbi/updates/license</license-site>
-		<debug-options></debug-options> <!-- empty by default -->
+		<debug-options /> <!-- empty by default -->
 	</properties>
 
 	<modules>
