--- a/development/org.eclipse.libra.repository/pom.xml
+++ b/development/org.eclipse.libra.repository/pom.xml
@@ -1,11 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<artifactId>org.eclipse.libra_parent</artifactId>
 		<groupId>org.eclipse.libra</groupId>
-		<version>0.3.5-SNAPSHOT</version>
+		<version>4.17.0-SNAPSHOT</version>
 		<relativePath>../../development/org.eclipse.libra.releng/pom.xml</relativePath>
 	</parent>
 
@@ -43,13 +42,11 @@
 								<configuration>
 									<tasks>
 										<delete includeemptydirs="false">
-											<fileset
-												dir="${p2-publish-dir}">
+											<fileset dir="${p2-publish-dir}">
 												<include name="**" />
 											</fileset>
 										</delete>
-										<copy includeemptydirs="false"
-											todir="${p2-publish-dir}">
+										<copy includeemptydirs="false" todir="${p2-publish-dir}">
 											<fileset dir="target/repository">
 												<include name="**" />
 											</fileset>
